--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
     <title>Login</title>
 </head>
 <body>
+{{ if . }}
+    <div class="error">{{ . }}</div>
+{{ end }}
 <form method="POST">
     <label>
         username: <input name="username"/>
